# password-manager

./: .clangd  .gitignore  CMakeLists.txt  README.md  README.md.save  design.txt
src/: constants.h  converter.cpp  converter.h  crypto_engine.cpp  crypto_engine.h  encryption_info.h  exception.h  file_manager.cpp  file_manager.h  main.cpp  password_entry.cpp  password_entry.h  secure_buffer.cpp  secure_buffer.h  secure_string.cpp  secure_string.h  utils.h  vault.cpp  vault.h  vault_serializer.cpp  vault_serializer.h  vault_service.cpp  vault_service.h
src/ui/: app.cpp  app.h  app_state.cpp  app_state.h  message_type.h  password_strength.cpp  password_strength.h  password_utils.cpp  password_utils.h  theme.h
src/ui/components/: components.cpp  components.h  container.cpp  container.h  input_field_component.h
src/ui/screens/: delete_screen.cpp  entry_screen.cpp  login_screen.cpp  login_screen.h  message_screen.cpp  message_screen.h  screens.h  search_screen.cpp  setup_screen.cpp  setup_screen.h  start_screen.cpp  start_screen.h  ui_constants.h  vault_screen.cpp  vault_screen.h
tests/data/bitwarden_exports/invalid/: incorrect_encrypton.json  missing_fields.json  nonsense.json  not_a_json.txt  random_json.json
tests/data/bitwarden_exports/valid/: empty_export.json  multiple_other_types.json  normal_export.json  simple.json  some_nulls.json
